## Makefile.am: produce Makefile.in from this

## copyright by the mpg123 project - free software under the terms of the LGPL 2.1
## see COPYING and AUTHORS files in distribution or http://mpg123.org
## initially written by Nicholas J. Humfrey
## reworked for non-recursive make by Thomas Orgis

# Mention all global variables first before including Make modules.
ACLOCAL_AMFLAGS = -I m4
bin_PROGRAMS =
EXTRA_PROGRAMS =
EXTRA_DIST =
if NEED_LIB
pkglib_LTLIBRARIES =
lib_LTLIBRARIES =
endif
noinst_LIBRARIES =
noinst_LTLIBRARIES =
nodist_include_HEADERS =
if NEED_MAINLIB
if NEED_LIB
include_HEADERS =
endif
endif
# Attempts to wrap that in NEED_MAN failed. So just live with the
# empty directory.
dist_man_MANS =
CLEANFILES =
TESTS =
XFAIL_TESTS =
check_PROGRAMS =

AM_CPPFLAGS = -DPKGLIBDIR="\"$(pkglibdir)\""
# That can be trimmed down later when adapting the sources to
# use relative paths for includes.
# Watch out for generated headers (that's why top_builddir is also present).
AM_CPPFLAGS += \
  $(LTDLINCL) \
  -I$(top_srcdir)/src \
  -I$(top_srcdir)/src/compat \
  -I$(top_srcdir)/src/common

# Automake cannot handle dependencies behind an autoconf expansion.
# So we need elaborate ifelsery here to make it see the libtool
# files for dependency rule generation. That is stupid. One point
# for those usurping build systems with new flaws.
if BUILD_LIBMPG123
LIBMPG123 = src/libmpg123/libmpg123.la
else
LIBMPG123 = @LIBMPG123_LD@
endif
if BUILD_LIBOUT123
LIBOUT123 = src/libout123/libout123.la
else
LIBOUT123 = @LIBOUT123_LD@
endif
if BUILD_LIBSYN123
LIBSYN123 = src/libsyn123/libsyn123.la
else
LIBSYN123 = @LIBSYN123_LD@
endif

# Include Make modules from subdirectories.
include src/Makemodule.am
include doc/Makemodule.am

if NEED_MAINLIB
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = 

# Pkg-config files and library includes.
if BUILD_LIBMPG123
pkgconfig_DATA += libmpg123.pc
AM_CPPFLAGS += -I$(top_srcdir)/src/libmpg123
endif
if BUILD_LIBOUT123
pkgconfig_DATA += libout123.pc
AM_CPPFLAGS += -I$(top_srcdir)/src/libout123
endif
if BUILD_LIBSYN123
pkgconfig_DATA += libsyn123.pc
AM_CPPFLAGS += -I$(top_srcdir)/src/libsyn123
endif
endif

if BUILD_PROGRAMS
dist_man_MANS += man1/mpg123.1 man1/out123.1
endif

# mpg123.spec is autogenerated but needs to be present in tarball!
EXTRA_DIST += \
  test_c99.c \
  mpg123.spec \
  makedll.sh \
  windows-builds.sh \
  equalize.dat \
  NEWS.libmpg123 \
  NEWS.libout123 \
  NEWS.libsyn123 \
  ports/cmake/CMakeLists.txt \
  ports/cmake/linux_i686.toolchain.cmake \
  ports/cmake/mpg123-config.cmake.in \
  ports/cmake/cmake/search_libs.cmake \
  ports/cmake/cmake/read_api_version.cmake \
  ports/cmake/cmake/CheckCPUArch.cmake \
  ports/cmake/cmake/CheckCPUArch.c.in \
  ports/cmake/src/CMakeLists.txt \
  ports/cmake/src/config.cmake.h.in \
  ports/cmake/src/libmpg123/CMakeLists.txt \
  ports/cmake/src/libout123/modules/CMakeLists.txt \
  ports/cmake/src/libout123/CMakeLists.txt \
  ports/cmake/src/libsyn123/CMakeLists.txt \
  ports/cmake/src/tests/CMakeLists.txt \
  ports/cmake/src/compat/CMakeLists.txt \
  ports/README \
  scripts/benchmark-cpu.pl \
  scripts/tag_lyrics.py \
  scripts/conplay \
  scripts/mpg123info
